<resources>
    <string name="app_name">CurrencyApp</string>
    <string name="currency_letter_code">Currency Code</string>
    <string name="exchange_rate">rate(in UAH)</string>
    <string name="difference">difference(in UAH)</string>
    <string name="currency_full_name">Currency Full Name</string>
    <string name="standard_error_message">Something went wrong</string>
    <string name="no_internet_connection_error_message">Check your internet connection</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="tags_list">tags list</string>
    <string name="source">source</string>
    <string name="publication_time">publication time</string>
    <string name="publication_date">publication date</string>
    <string name="title">Title</string>
    <string name="title_currencies">rates</string>
    <string name="title_news">Financial News</string>
    <string name="keywords_input_hint">new bitcoin news 2021,money,-etherium</string>
    <string name="tags_input_hint">coma separated tags(Ex:Ukraine,UAH,money)</string>
    <string name="from_date_input_hint">FromDate(YYYY-MM-DD)</string>
    <string name="to_date_input_hint">toDate(YYYY-MM-DD)</string>
    <string name="date_placeholder">date</string>
    <string name="apply">Apply</string>
    <string name="time_gap">Time Gap</string>
    <string name="keywords">Keywords</string>
    <string name="tags">Tags</string>
    <string name="cancel">Cancel</string>
    <string name="edit_text_error_message">Invalid input</string>
    <string name="settings">Settings</string>
    <string name="back_again_to_exit">Press back again to exit</string>
    <string name="please_wait">Please wait</string>
    <string name="currency_info">currency info</string>
    <string name="rates_chart">rates chart for last week</string>
    <string name="base_currency_spinner">base currency spinner</string>
    <string name="rate_difference_precision_spinner">rate difference spinner</string>
    <string name="base_currency_settings_title">Base currency :</string>
    <string name="daily_rate_difference_precision">Daily rate difference precision:</string>
    <string name="rates_list_settings_title">Rates list settings</string>
    <string name="currency_rates_title">Currency rates for %1$s</string>
    <string name="based_on_detailes">Chart uses rates based on %1$s</string>
    <string name="title_rates_chart_for">Rates chart for %1$s</string>
    <string name="from_to">from: %1$s to: %2$s</string>
    <string name="rates">rates</string>
</resources>