<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardBackgroundColor="#001E2C"
    app:cardCornerRadius="20dp"
    app:cardElevation="15dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvChangeBaseCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/base_currency_settings_title"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tvChangeDailyRateChangePrecision"
            app:layout_constraintEnd_toStartOf="@+id/spinnerBaseCurrency"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvChangeDailyRateChangePrecision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/daily_rate_difference_precision"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btnCancelRatesSettings"
            app:layout_constraintEnd_toStartOf="@+id/spinnerRateDifferencePrecision"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvChangeBaseCurrency" />

        <Spinner
            android:id="@+id/spinnerBaseCurrency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/base_currency_spinner"
            app:layout_constraintBottom_toBottomOf="@+id/tvChangeBaseCurrency"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/spinnerRateDifferencePrecision"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/rate_difference_precision_spinner"
            app:layout_constraintBottom_toBottomOf="@+id/tvChangeDailyRateChangePrecision"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnApplyRatesSettings"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/apply"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCancelRatesSettings" />

        <Button
            android:id="@+id/btnCancelRatesSettings"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cancel"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnApplyRatesSettings"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

